cleaned-up code + contrast fix on project keywords

--- a/css/style.css
+++ b/css/style.css
@@ -19,19 +19,11 @@ nav a{
   padding: 2vh;
 }
 
-/* nav li a:focus{
-  background-color: #111;
-} */
-
-/* h2, p{
-  padding-bottom: 20px;
-} */
 
 main{
   margin: 2vh 4vh;
   margin-bottom: 8vh;
 }
-
 
 img {
   max-width: 100%;
@@ -81,17 +73,8 @@ img {
   margin-top: 80px;
   margin-left: 20px;
   /* padding-top: 1vh;
-  padding-bottom: 1vh; */
-  /* text-align: center; */
-}
-
-.mobile-container {
-    /* max-width: 480px; */
-  /* margin: auto; */
-  /* background-color: #555; */
-  /* height: 900px; */
-  /* color: white;
-  border-radius: 10px; */
+  padding-bottom: 1vh;
+  text-align: center; */
 }
 
 .topnav {
@@ -122,12 +105,6 @@ img {
   right: 2vw;
   top: 2vw;
 }
-
-
-/* .active {
-  background-color: #4CAF50;
-  color: white;
-} */
 
 .skip a{
   position:absolute;
@@ -187,10 +164,6 @@ img {
   color: white;
 }
 
-/* .arrow-icon i{
-  display: none;
-} */
-
 #main-content-project{
   /* change font-size for larger screens */
   visibility: visible;
@@ -204,7 +177,7 @@ img {
 
 .project-keywords{
   text-align: center;
-  color: #6e7175;
+  color: #333;
   font-family: 'Anonymous Pro', monospace;
   margin: 2vh 0;
 }
@@ -239,9 +212,6 @@ img {
 .close .accordionItemContent{
   height: 0px;
   transition:height 1s ease-out;
-  /* -webkit-transform: scaleY(0);
-	-o-transform: scaleY(0);
-	-ms-transform: scaleY(0); */
 	transform: scaleY(0);
   text-align: left;
   display: block;
@@ -253,17 +223,8 @@ img {
   width: 100%;
   margin: 0px 0px 10px 0px;
   display:block;
-  /* -webkit-transform: scaleY(1);
-	-o-transform: scaleY(1);
-	-ms-transform: scaleY(1); */
 	transform: scaleY(1);
-  /* -webkit-transform-origin: top;
-	-o-transform-origin: top;
-	-ms-transform-origin: top; */
 	transform-origin: top;
-	/* -webkit-transition: -webkit-transform 0.4s ease-out;
-	-o-transition: -o-transform 0.4s ease;
-	-ms-transition: -ms-transform 0.4s ease; */
   box-sizing: border-box;
   color: #111;
   line-height: 22px;
@@ -350,9 +311,6 @@ footer{
   padding-left: 3vh;
 }
 
-/* footer p{
-  color: #fff;
-} */
 
 /* responsive for tablet */
 @media screen and (min-width:650px) {
@@ -371,12 +329,6 @@ footer{
     align-items: center;
     /* background-color: #333; */
   }
-
-  /* nav{
-    display: flex;
-    flex-flow: row nowrap;
-    width: 10%;
-  } */
 
   .topnav ul{
     /* list-style-type: none; */
@@ -428,47 +380,9 @@ footer{
     margin-left: 2vh;
   }
 
-  /* .topnav a {
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    text-align: center;
-    display: block;
-  } */
-
   .topnav a.icon {
     display: none;
   }
-
-  /* .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  } */
-
-  /* nav {
-    display: block;
-    width: 100%;
-  }
-
-  nav ul{
-  	display: flex;
-  	flex-flow: column wrap;
-    list-style-type: none;
-    position: fixed;
-    display: block;
-    width: 100%;
-    top: 0;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-  } */
-
-  /* nav ul li{
-    width: 100%;
-    background-color: #111;
-  }*/
 
   .fa-bars{
     display: none;
@@ -516,36 +430,7 @@ footer{
   .pic{
     margin: 1vh;
   }
-  /* nav{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-  } */
 
-  /* #main-content-project{
-    padding: 1rem;
-    font-size: 5rem;
-    text-align: center;
-    color: #6e7175;
-  }
-
-  .projects{
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-  }
-
-  .project-keywords li{
-    text-align: center;
-    color: #6e7175;
-  }
-
-  .arrow-icon i{
-    display: inline-block;
-    margin-left: 44vw;
-    color: #8a8f96;
-    text-decoration: none;
-  } */
 }
 
 /* responsive design for larger screens */
@@ -557,12 +442,6 @@ footer{
     align-items: center;
     background-color: #333;
   }
-
-  /* nav{
-    display: flex;
-    flex-flow: row nowrap;
-    width: 10%;
-  } */
 
   .topnav ul{
     /* list-style-type: none; */
@@ -582,16 +461,6 @@ footer{
     display: inline-block;
     /* width: 25%; */
   }
-
-  /* nav li {
-    float: right;
-  } */
-
-  /* nav ul li{ */
-    /* display: inline-block; */
-    /* flex-direction: row; */
-    /* width: 25%; */
-  /* } */
 
   .topnav li:hover {
     background-color: #ddd;
@@ -614,13 +483,6 @@ footer{
     width: 50vh;
   }
 
-  /* .gallery{
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-    justify-content: center;
-	} */
-
   /* testing CSS carousel */
   .gallery{
     position: relative;
@@ -633,23 +495,9 @@ footer{
     margin: auto;
 	}
 
-  /* .content {
-    margin: 0;
-    padding: 0;
-  } */
-
   .content .pic {
     z-index: 2;
   }
-
-  /* .active {
-    height: 130px;
-  } */
-
-
-  /* .content{
-    position: absolute;
-  } */
 
   .active button {
     visibility: visible;
@@ -673,33 +521,18 @@ footer{
   }
 
   .active .pic {
-    /* color: #369; */
     position: absolute;
     margin-top: 1vh;
     margin-left: 15vw;
     margin-bottom: 1vh;
     margin-right:15vw;
-    /* top: 28px; */
-    /* opacity: 0; */
     transform: scale(0);
-    /* text-decoration: none; */
   }
 
-  /* .active img {
-    position: absolute;
-    top: 28px;
-    opacity: 0;
-    transform: scale(0); */
-    /* transition: 1s; */
-  /* } */
 
   .active .pic.current {
-    /* top: 28px; */
-    /* background: lightblue; */
     pointer-events: auto;
-    /* opacity: 1; */
     transform: scale(1);
-    /* transition: 1s; */
   }
 /* end of carousel test */
 
